# codematics-be

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  FRONTEND_GUIDE.md  IMPLEMENTATION_ANALYSIS.md  README.md  SYSTEM_FLOW.md  SYSTEM_FLOW_AND_TESTING.md  entrypoint.sh  pyproject.toml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 0b5e5c2a04f7_add_analyses_table.py  1748ddf77127_add_user_profile_fields.py  19f318f7e812_add_github_fields_to_users.py  21bdb2ec4aec_add_model_versions_table.py  32b256642a9f_add_github_refresh_token_to_users.py  499042db27c8_add_deployments_table.py  4bb2bd35fcbd_add_rbac_tables.py  6988b0f0df5b_add_github_fields_to_deployments.py  6b590d70e7ce_add_deployment_metrics.py  7c168b3c55e0_add_deployments_table.py  a96f1ad17d85_add_file_extension_to_model_versions.py  d157beeb990f_add_admin_api_key_to_deployments.py  f46e17ccaf3c_initial_schema.py
app/: config.py  main.py
app/core/: cloud_build.py  cloud_run.py  code_generator.py  dependencies.py  dockerfile_generator.py  export_service.py  gemini.py  github_service.py  logging_service.py  monitoring.py  notebook_service.py  parser.py  secrets_manager.py  storage.py
app/db/: database.py  models.py
app/middleware/: __init__.py  error_handler.py  logging.py  rate_limit.py
app/schemas/: analysis.py  auth.py  build.py  dashboard.py  deployment.py  metrics.py  model_version.py  notebook.py  profile.py
app/utils/: config_loader.py  (+4 more)
examples/: ml_classification_api.ipynb  model_info.json  sample_fastapi_app.ipynb  sample_streamlit_app.ipynb
(+14 files in other folders)
